@@ -71,6 +71,7 @@ Fl contains several widgets and other classes including:
 - [Fl::CheckButton](https://metacpan.org/pod/Fl::CheckButton) - a button with a checkbox
 - [Fl::LightButton](https://metacpan.org/pod/Fl::LightButton) - a button with a light to indicate 'on' vs 'off'
 - [Fl::ReturnButton](https://metacpan.org/pod/Fl::ReturnButton)
+- [Fl::RepeatButton](https://metacpan.org/pod/Fl::RepeatButton)
 - [Fl::Chart](https://metacpan.org/pod/Fl::Chart)
 - [Fl::Group](https://metacpan.org/pod/Fl::Group)
 - [Fl::Window](https://metacpan.org/pod/Fl::Window)
